<resources>
    <string name="app_name">Lock in</string>
    <string name="app_name_short">Lock in</string>
    <string name="hello_world">Hello World!</string>
    <string name="setup_title">Workout Days</string>
    <string name="start_workout">Start Workout</string>
    <string name="exercises_for_day">%s Exercises</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="no_exercises">No exercises yet. Tap + to add one.</string>
    <string name="edit_exercises">Edit exercises</string>
    <string name="recent_history">Recent History</string>
    <string name="todays_workout">Today</string>
    <string name="weight_label_kg">Weight [kg]</string>
    <string name="reps_label">Reps</string>
    <string name="kg">kg</string>
    <string name="log_set">Log Set</string>
    <string name="log_dropdown">+ Drop Set</string>
    <string name="undo">Undo</string>
    <string name="previous">&lt; PREV</string>
    <string name="next">NEXT &gt;</string>
    <string name="no_history">No previous data</string>
    <string name="select_day">Select Workout Day</string>
    <string name="exercise_progress">Exercise %1$d of %2$d</string>
    <string name="sets_today">Sets: %s</string>
    <string name="no_sets_yet">No sets logged yet</string>
    <string name="finish_workout">Finish</string>
    <string name="add_note">+ Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_hint">Add a note for this exercise</string>
    <string name="finish_workout_confirm">Are you sure you want to finish this workout?</string>
    <string name="rest_timer">Rest</string>
    <string name="skip">Skip</string>
    <string name="rest_complete">Rest Complete</string>
    <string name="time_remaining">Time remaining: %s</string>
    <string name="rest_timer_done">Time to do your next set!</string>
    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="rest_timer_duration">Rest Timer Duration</string>
    <string name="minutes_short">min</string>
    <string name="seconds_short">sec</string>
    <string name="export_database">Export Database</string>
    <string name="import_database">Import Database</string>
    <string name="export_success">Database exported successfully</string>
    <string name="import_success">Database imported successfully</string>
    <string name="export_error">Failed to export database</string>
    <string name="import_error">Failed to import database</string>
    <string name="import_warning">This will replace all existing data. Continue?</string>
    <string name="variation_none">Variation: None</string>
    <string name="variation_prefix">Variation: %s</string>
    <string name="select_variation">Select Variation</string>
    <string name="add_variation">Add new variation</string>
    <string name="new_variation_hint">New variation name</string>
    <string name="variation_none_option">None</string>
    <string name="add_exercises_to_workout">Add Exercises</string>
    <string name="add_exercises_short">+ Add</string>
    <string name="add_button">Add</string>
    <string name="no_other_exercises">No other exercises available</string>
    <string name="create_new_exercise">Create new exercise</string>
</resources>
